# Cybersecurity-SOC-env

./: Dockerfile  README.md  __init__.py  alerts.py  app.py  environment.py  grader.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
