[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build-backend"

[project]
name = "soc_security_env"
version = "1.0.0"
description = "SOC analyst RL environment for OpenEnv hackathon"
dependencies = [
    "gymnasium==0.29.1",
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["environment", "models", "alerts", "tasks", "grader"]